--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <queries>
-        <!--允许查询抖音和抖音极速版的信息-->
+
+        <!-- 允许查询抖音和抖音极速版的信息 -->
         <package android:name="com.ss.android.ugc.aweme" />
         <package android:name="com.ss.android.ugc.aweme.lite" />
     </queries>
-
 
     <application
         android:name=".CustomApplication"
@@ -23,17 +23,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".douyinapi.DouYinEntryActivity"
+        <activity
+            android:name=".douyinapi.DouYinEntryActivity"
+            android:exported="true"
             android:launchMode="singleTask"
-            android:taskAffinity="com.qxy.qxylearning"
-            android:exported="true"/>
+            android:taskAffinity="com.qxy.qxylearning" />
 
         <receiver
             android:name=".StayInDyReceiver"
@@ -51,7 +57,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
 
