--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
     //Gson 数据解析器依赖库
-    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
-    implementation 'com.squareup.okio:okio:1.12.0'
     implementation 'com.alibaba:fastjson:1.2.31'
+
 
     implementation 'com.bytedance.ies.ugc.aweme:opensdk-china-external:0.1.8.0'
     implementation 'com.bytedance.ies.ugc.aweme:opensdk-common:0.1.8.0'
