--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,20 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+//    okhttp依赖
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
     //Gson 数据解析器依赖库
+
+//    retrofit依赖
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+//    Gson解析
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'com.alibaba:fastjson:1.2.31'
+
+
 
 
     implementation 'com.bytedance.ies.ugc.aweme:opensdk-china-external:0.1.8.0'
