--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +18,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://artifact.bytedance.com/repository/AwemeOpenSDK' }
+        maven { url 'https://jitpack.io' }
 
     }
 }
